nav bar jump fixed, htmlmin added to gulpfile.js

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,7 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Oswald");
-.form {
-  text-align: center; }
-
 #inside {
   margin: 0px;
   width: 100%;
@@ -19,16 +16,10 @@
   color: #FFFAFA;
   height: 100vh;
   background: url("../images/cheesebg.jpg") no-repeat center center fixed;
-<<<<<<< HEAD
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; }
-=======
-  background-size: cover;
-  text-align: center;
-  margin-left: 0px; }
->>>>>>> whatson-branch
 
 .landing h1 {
   width: 100%;
@@ -89,7 +80,6 @@
       line-height: 2em; }
 
 .navbar {
-<<<<<<< HEAD
   background-color: rgba(169, 169, 169, 0.5) !important;
   opacity: 0.9 !important;
   font-family: 'Indie Flower', cursive;
@@ -100,12 +90,6 @@
 
 header {
   margin: 0px; }
-=======
-  background-color: grey !important;
-  opacity: 0.9 !important;
-  font-family: 'Indie Flower', cursive;
-  font-size: 24px; }
->>>>>>> whatson-branch
 
 a.navbar-brand.d-none.d-lg-block {
   color: darkorange;
@@ -115,9 +99,6 @@ a.navbar-brand.d-none.d-lg-block {
 a.navbar-brand.d-lg-none {
   color: darkorange;
   font-size: 32px; }
-
-a.navbar-brand.d-lg-none {
-  color: darkorange; }
 
 div.dropdown-menu.show {
   background-color: grey;
